20180827: Updated profile layout and fixed spacing in user dropdown.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -222,6 +222,7 @@ body.loading {
     
                 .dropdown-item {
                     font-size: .9rem;
+                    line-height: 1.5;
     
                     i {
                         margin-right: 1rem;
